--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="description">
           <h2>Blog post title</h2>
           <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <a href="https://medium.com/@yuajung/affordable-trap-the-hidden-truth-of-temu-shopping-d7126f6e81b0" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
