--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
+          <h2>Affordable Trap: The Hidden Truth of Temu Shopping</h2>
+          <p>Exploring the hidden truths behind Temu shopping and the traps of affordable pricing.</p>
           <a href="https://medium.com/@yuajung/affordable-trap-the-hidden-truth-of-temu-shopping-d7126f6e81b0" class="external-link" target="_blank">Read</a>
         </div>
       </div>
