--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <h2>Education in Education: What's AI's part?</h2>
+          <p>Group Memebers: Will Tolley, Archit Gupta, Thomas Karen, Nicole Fess, Yuajung Song (me) </p>
+          <p>We discussed the topic of the impact of AI on education.</p>
+          <a href="https://soundcloud.com/will-tolley-586666607/education-in-education-whats-ais-part?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
@@ -60,6 +61,7 @@
 
     <div class="links-container">
       <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="www.linkedin.com/in/yuajung-song-13aa47293" class="button button-background-color" target="_blank">LinkedIn</a>
     </div>
 
   </div>
