--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="links-container">
       <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
-      <a href="www.linkedin.com/in/yuajung-song-13aa47293" class="button button-background-color" target="_blank">LinkedIn</a>
+      <a href="https://linkedin.com/in/yuajung-song-13aa47293" class="button" target="_blank">LinkedIn</a>
     </div>
 
   </div>
