add image & change colors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <!-- Image and name container. Put your replacement photo—which you should crop to be square—in the images folder, then change the source attribute to images/yourportraitfilename.jpg. This path says, "Look in the images folder for yourportraitfilename.jpg." Be sure to change the alt text, too. -->
     <div class="image-container">
-      <img src="images/portrait.jpg" alt="Photo by Art Hauntington">
+      <img src="images/my_cats-ezgif.com-crop.jpg" alt="Photo by Yuajung Song">
     </div>
     <div class="intro">
       I'm <span class="name"><strong>Yuajung Song</strong></span>,a CS major aspiring to become a game developer. Currently, I am self-studying CAD whenever I have free time.
