--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Add your name below -->
   <title>Yuajung Song</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Glegoo:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
 <body class="main-text-color">
