--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <h2>Drawing This Week's Emotions Together with Flowers</h2>
+          <p>Let’s wrap up the week with a quick drawing session!</p>
+          <p>Draw your favorite flower and take a moment to reflect. Let go of any tough moments and step into the new week with a fresh, lighter heart!</p>
+          <a href="https://youtu.be/G-KUhe79KBw" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
@@ -63,7 +64,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://github.com/yuajung" class="button" target="_blank">Github</a>
       <a href="https://linkedin.com/in/yuajung-song-13aa47293" class="button" target="_blank">LinkedIn</a>
     </div>
 
