change some word.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="description">
           <h2>Drawing This Week's Emotions Together with Flowers</h2>
           <p>Let’s wrap up the week with a quick drawing session!</p>
-          <p>Draw your favorite flower and take a moment to reflect. Let go of any tough moments and step into the new week with a fresh, lighter heart!</p>
+          <p>Draw your flower and take a moment to reflect. Let go of any tough moments and step into the new week with a fresh, lighter heart!</p>
           <a href="https://youtu.be/G-KUhe79KBw" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
