--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <div class="links-container">
       <a href="https://github.com/yuajung" class="button" target="_blank">Github</a>
       <a href="https://linkedin.com/in/yuajung-song-13aa47293" class="button" target="_blank">LinkedIn</a>
+      <a href="https://drive.google.com/drive/folders/1uI-XXFbWm0y33dZxWUkrXn0HqNt_do_v?usp=sharing" class="button button-background-color" target="_blank">Resume</a>
     </div>
 
   </div>
