draft for final

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <div class="slidedown">
         <div class="description">
           <h2>Education in Education: What's AI's part?</h2>
-          <p>Group Memebers: Will Tolley, Archit Gupta, Thomas Karen, Nicole Fess, Yuajung Song (me) </p>
-          <p>We discussed the topic of the impact of AI on education.</p>
+          <p>Four computer science students and one education student share their thoughts on the impact of AI in college. </p>
+          <p>What should we do with AI in the future of education?</p>
           <a href="https://soundcloud.com/will-tolley-586666607/education-in-education-whats-ais-part?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
